implementation with nodes